mm: kmemleak: Don't require global debug options or debugfs
This allows kmemleak to function even when debugfs is globally disabled,
allowing kmemleak to give accurate results for CONFIG_DEBUG_FS=n.

Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>

--- a/mm/Makefile
+++ b/mm/Makefile
@@ -110,6 +110,8 @@ obj-$(CONFIG_HMM) += hmm.o
 obj-$(CONFIG_MEMFD_CREATE) += memfd.o
 obj-$(CONFIG_PROCESS_RECLAIM)	+= process_reclaim.o
 
+CFLAGS_kmemleak.o += -DCONFIG_DEBUG_FS
+
 #ifdef OPLUS_FEATURE_HEALTHINFO
 obj-y += healthinfo/
 #endif /* OPLUS_FEATURE_HEALTHINFO */
