--- a/drivers/misc/aw8697_haptic/Makefile
+++ b/drivers/misc/aw8697_haptic/Makefile
@@ -3,3 +3,5 @@
 ccflags-y += -DCONFIG_OPLUS_HAPTIC_OOS
 
 obj-$(CONFIG_AW8697_HAPTIC) += aw8697.o
+obj-$(CONFIG_AW8697_HAPTIC) += haptic.o
+haptic-objs := aw8692x.o haptic_hv.o
